Update print statement from 'Hello' to 'Goodbye'

--- a/Project2026/index.html
+++ b/Project2026/index.html
@@ -236,7 +236,7 @@
   <div class="container">
     
     <div id="main-screen" class="screen active">
-      <h1>Will you be my Valentine?</h1>
+      <h1>Soni, will you be my Valentine?</h1>
       <p class="subtitle">Mein Tumse Mohabat Kardi Ho ♥</p>
       
       <div class="buttons">
@@ -351,7 +351,7 @@
           </div>
            <div class="timeline-item" data-item>
             <div class="timeline-header">
-              <span class="timeline-date">Mont date again 😂</span>
+              <span class="timeline-date">Monte date again 😂</span>
               <span class="timeline-title">I love her face!</span>
               <span class="timeline-chevron">▼</span>
             </div>
@@ -623,3 +623,4 @@
 </body>
 
 </html>
+
